--- a/XChess.cabal
+++ b/XChess.cabal
@@ -12,7 +12,7 @@ executable XChess
                    transformers -any, resourcet -any, bytestring -any, split -any,
                    attoparsec -any, filepath -any, containers -any, split -any,
                    mtl -any
-    main-is: ConduitPlayground.hs
+    main-is: XChess.hs
     buildable: True
     hs-source-dirs: src, src/parsers
     ghc-options: -O3 -threaded
