--- a/XChess.cabal
+++ b/XChess.cabal
@@ -3,7 +3,9 @@ version: 0.0.1
 cabal-version: >=1.6
 build-type: Simple
 license: AllRightsReserved
-
+license-file: ""
+data-dir: ""
+ 
 executable XChess
     build-depends: base >=4.2 && <5, wxcore -any, wx -any,
                    network -any, conduit -any, conduit-extra -any, text -any,
@@ -14,5 +16,5 @@ executable XChess
     buildable: True
     hs-source-dirs: src src/parsers src/api src/wx
     ghc-options: -O3 -threaded
-
-
+ 
+ 
