--- a/XChess.cabal
+++ b/XChess.cabal
@@ -12,7 +12,7 @@ executable XChess
                    transformers -any, resourcet -any, bytestring -any, split -any,
                    attoparsec -any, filepath -any, containers -any, split -any,
                    mtl -any, stm -any, sodium -any
-    main-is: WxSeek.hs
+    main-is: XChess.hs
     buildable: True
     hs-source-dirs: src src/parsers src/api src/wx
     ghc-options: -O3 -threaded
