--- a/XChess.cabal
+++ b/XChess.cabal
@@ -12,7 +12,7 @@ library
                    transformers -any, resourcet -any, bytestring -any, split -any,
                    attoparsec -any, filepath -any, containers -any, split -any,
                    mtl -any, stm -any, sodium -any, directory -any, filepath -any,
-                   time -any                                                          
+                   time -any
     hs-source-dirs: src
     exposed-modules: Lentils.Api.Api,
                      Lentils.Api.Challenge,
@@ -26,16 +26,23 @@ library
                      Lentils.Fics.Parsers.MoveParser2,
                      Lentils.Fics.Parsers.PositionParser,
                      Lentils.Fics.Parsers.RatingParser,
-                     Lentils.Fics.Parsers.SeekMsgParsers
-    ghc-options: -O3 -threaded -W
+                     Lentils.Fics.Parsers.SeekMsgParsers,
+                     Lentils.Utils.PGN,
+                     Lentils.Utils.Board,
+                     Lentils.Utils.Utils,
+                     Lentils.Wx.About,
+                     Lentils.Wx.Challenge,
+                     Lentils.Wx.Login,
+                     Lentils.Wx.Match,
+                     Lentils.Wx.ObservedGame,
+                     Lentils.Wx.Seek,
+                     Lentils.Wx.ToolBox,
+                     Lentils.Wx.Utils
 
---executable XChessExe
---    build-depends: XChess
---    main-is: src/XChess.hs
---    buildable: True
+    ghc-options: -O3 -threaded -W
 
 Test-Suite XChessTestSuite
     type:       detailed-0.9
-    hs-source-dirs: test 
-    test-module: Bar
-    build-depends: XChess, base, Cabal >= 1.9.2, bytestring 
+    hs-source-dirs: test
+    test-module: XChessTest
+    build-depends: XChess, base, Cabal >= 1.9.2, bytestring
