--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -4,15 +4,15 @@ cabal-version: >= 1.8
 build-type: Simple
 license: AllRightsReserved
 license-file: ""
-data-dir: resources
+data-files: resources/*.gif, resources/*.png, resources/*.jpg
 
 library
-    build-depends: base >=4.2 && <5, cabal-macosx, wxcore -any, wx -any,
-                   network -any, conduit -any, conduit-extra -any, text -any,
-                   transformers -any, resourcet -any, bytestring -any, split -any,
-                   attoparsec -any, filepath -any, containers -any, split -any,
-                   mtl -any, stm -any, sodium -any, directory -any, filepath -any,
-                   time -any, MissingH -any, old-locale -any
+    build-depends: base >=4.2 && <5, cabal-macosx, wxcore, wx,
+                   network, conduit, conduit-extra, text,
+                   transformers, resourcet, bytestring, split,
+                   attoparsec, filepath, containers, split,
+                   mtl, stm, sodium, directory, filepath,
+                   time, MissingH, old-locale
     hs-source-dirs: src
     exposed-modules: Macbeth.Api.Api,
                      Macbeth.Api.Challenge,
@@ -49,7 +49,7 @@ library
 
 executable MacbethRun
   main-is: src/Macbeth.hs
-  build-depends: base  >= 4.2, wx -any, Macbeth
+  build-depends: base  >= 4.2, wx, Macbeth
   ghc-options: -O3 -threaded -W
 
 Test-Suite MacbethTestSuite
