--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -44,13 +44,14 @@ library
                      Macbeth.Wx.Pending,
                      Macbeth.Wx.GamesList,
                      Macbeth.Wx.SoughtList,
-                     Macbeth.Wx.Clock
+                     Macbeth.Wx.Clock,
+                     Macbeth.Wx.GameMoves
   other-modules: Paths_Macbeth
   ghc-options: -O3 -threaded -W
 
 executable MacbethRun
   main-is: src/Macbeth.hs
-  build-depends: base  >= 4.2, wx, wxcore, Macbeth
+  build-depends: base  >= 4.2, wx, wxcore, Macbeth, stm
   ghc-options: -O3 -threaded -W
 
 Test-Suite MacbethTestSuite
