--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -7,11 +7,8 @@ license-file: ""
 data-dir: resources
 
 library
-    build-depends: base >=4.2 && <5, cabal-macosx, wxcore, wx,
-                   network, conduit, conduit-extra, text,
-                   transformers, resourcet, bytestring, split,
-                   attoparsec, filepath, containers, split,
-                   mtl, stm, sodium, directory, filepath,
+    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet, 
+                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                    time, MissingH, old-locale, safe, FindBin
     hs-source-dirs: src
     exposed-modules: Paths,
