--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -7,7 +7,7 @@ license-file: ""
 data-dir: resources
 
 library
-    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet, 
+    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                    bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                    time, MissingH, old-locale, safe, FindBin
     hs-source-dirs: src
@@ -18,6 +18,7 @@ library
                      Macbeth.Fics.Api.Game,
                      Macbeth.Fics.Api.Move,
                      Macbeth.Fics.Api.Rating,
+                     Macbeth.Fics.Api.PendingOffer,
                      Macbeth.Fics.Api.Seek,
                      Macbeth.Fics.FicsConnection
                      Macbeth.Fics.Parsers.Api,
