--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -36,7 +36,7 @@ library
                      Macbeth.Utils.Utils,
                      Macbeth.Wx.Api,
                      Macbeth.Wx.Challenge,
-                     Macbeth.Wx.Clock,
+                     Macbeth.Wx.StatusPanel,
                      Macbeth.Wx.Configuration,
                      Macbeth.Wx.Finger,
                      Macbeth.Wx.GamesList,
