--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -30,11 +30,12 @@ library
                      Macbeth.Fics.Parsers.RatingParser,
                      Macbeth.Fics.Parsers.SeekMsgParsers,
                      Macbeth.Fics.Utils.Bitmask,
+                     Macbeth.Utils.BoardUtils,
                      Macbeth.Utils.PGN,
                      Macbeth.Utils.FEN,
-                     Macbeth.Utils.Board,
                      Macbeth.Utils.Utils,
-                     Macbeth.Wx.Api,
+                     Macbeth.Wx.BoardState,
+                     Macbeth.Wx.Board,
                      Macbeth.Wx.Challenge,
                      Macbeth.Wx.StatusPanel,
                      Macbeth.Wx.Configuration,
