--- a/Macbeth.cabal
+++ b/Macbeth.cabal
@@ -9,7 +9,7 @@ data-dir: resources
 library
     build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                    bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
-                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap
+                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, lens
     hs-source-dirs: src
     exposed-modules: Paths,
                      Macbeth.Fics.FicsConnection
