--- a/Macbeth-lib.cabal
+++ b/Macbeth-lib.cabal
@@ -61,6 +61,7 @@ library
                      Macbeth.Wx.ToolBox,
                      Macbeth.Wx.Utils
   other-modules: Paths_Macbeth
+  ghc-options: -W
 
 executable Macbeth
   main-is: src/Macbeth.hs
