New frame Bughouse Partner Offer

--- a/Macbeth-lib.cabal
+++ b/Macbeth-lib.cabal
@@ -57,6 +57,7 @@ library
                      Macbeth.Wx.Match,
                      Macbeth.Wx.Game,
                      Macbeth.Wx.Pending,
+                     Macbeth.Wx.PartnerOffer,
                      Macbeth.Wx.PieceSet,
                      Macbeth.Wx.PlayersList,
                      Macbeth.Wx.Seek,
