--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -20,7 +20,8 @@ source-repository head
 library
     build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                    bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
-                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap
+                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, cryptocipher, crypto-cipher-types,
+                   binary
     hs-source-dirs: src
     exposed-modules: Paths,
                      Macbeth.Fics.FicsConnection
@@ -47,6 +48,7 @@ library
                      Macbeth.Utils.PGN,
                      Macbeth.Utils.FEN,
                      Macbeth.Utils.Utils,
+                     Macbeth.Utils.Salt,
                      Macbeth.Wx.BoardState,
                      Macbeth.Wx.Board,
                      Macbeth.Wx.Challenge,
@@ -68,7 +70,7 @@ library
                      Macbeth.Wx.ToolBox,
                      Macbeth.Wx.Utils
   other-modules: Paths_Macbeth
-  ghc-options: -W
+  ghc-options: -W 
 
 executable Macbeth
   main-is: src/Macbeth.hs
