--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -21,12 +21,12 @@ library
     build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                    bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                    time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, cryptocipher, crypto-cipher-types,
-                   binary
+                   binary, hslogger, aeson
     hs-source-dirs: src
     exposed-modules: Paths,
                      Macbeth.Fics.FicsConnection
                      Macbeth.Fics.FicsMessage,
-                     Macbeth.Fics.Configuration,
+                     Macbeth.Fics.AppConfig,
                      Macbeth.Fics.Api.Api,
                      Macbeth.Fics.Api.Challenge,
                      Macbeth.Fics.Api.Game,
@@ -68,6 +68,7 @@ library
                      Macbeth.Wx.Seek,
                      Macbeth.Wx.SoughtList,
                      Macbeth.Wx.ToolBox,
+                     Macbeth.Wx.UserConfig,
                      Macbeth.Wx.Utils
   other-modules: Paths_Macbeth
   ghc-options: -W 
