New package Macbeth.Wx.Game

--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -50,10 +50,10 @@ library
                      Macbeth.Utils.Utils,
                      Macbeth.Utils.Salt,
                      Macbeth.OSX.Sounds,
-                     Macbeth.Wx.BoardState,
-                     Macbeth.Wx.Board,
+                     Macbeth.Wx.Game.BoardState,
+                     Macbeth.Wx.Game.Board,
                      Macbeth.Wx.Challenge,
-                     Macbeth.Wx.StatusPanel,
+                     Macbeth.Wx.Game.StatusPanel,
                      Macbeth.Wx.Configuration,
                      Macbeth.Wx.Finger,
                      Macbeth.Wx.GamesList,
@@ -64,7 +64,7 @@ library
                      Macbeth.Wx.Game.Game,
                      Macbeth.Wx.Pending,
                      Macbeth.Wx.PartnerOffer,
-                     Macbeth.Wx.PieceSet,
+                     Macbeth.Wx.Game.PieceSet,
                      Macbeth.Wx.PlayersList,
                      Macbeth.Wx.Seek,
                      Macbeth.Wx.SoughtList,
