--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -50,10 +50,7 @@ library
                      Macbeth.Utils.Utils,
                      Macbeth.Utils.Salt,
                      Macbeth.OSX.Sounds,
-                     Macbeth.Wx.Game.BoardState,
-                     Macbeth.Wx.Game.Board,
                      Macbeth.Wx.Challenge,
-                     Macbeth.Wx.Game.StatusPanel,
                      Macbeth.Wx.Configuration,
                      Macbeth.Wx.Finger,
                      Macbeth.Wx.GamesList,
@@ -61,18 +58,22 @@ library
                      Macbeth.Wx.GameType,
                      Macbeth.Wx.Login,
                      Macbeth.Wx.Match,
-                     Macbeth.Wx.Game.Game,
                      Macbeth.Wx.Pending,
                      Macbeth.Wx.PartnerOffer,
-                     Macbeth.Wx.Game.PieceSet,
                      Macbeth.Wx.PlayersList,
                      Macbeth.Wx.Seek,
                      Macbeth.Wx.SoughtList,
                      Macbeth.Wx.ToolBox,
                      Macbeth.Wx.UserConfig,
-                     Macbeth.Wx.Utils
+                     Macbeth.Wx.Utils,
+                     Macbeth.Wx.Game.BoardState,
+                     Macbeth.Wx.Game.Board,
+                     Macbeth.Wx.Game.Game,
+                     Macbeth.Wx.Game.PieceSet,
+                     Macbeth.Wx.Game.StatusPanel,
+                     Macbeth.Wx.Game.GameSounds
   other-modules: Paths_Macbeth
-  ghc-options: -W 
+  ghc-options: -W
 
 executable Macbeth
   main-is: src/Macbeth.hs
