--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -29,6 +29,7 @@ library
                      Macbeth.Fics.AppConfig,
                      Macbeth.Fics.Api.Api,
                      Macbeth.Fics.Api.Challenge,
+                     Macbeth.Fics.Api.Chat,
                      Macbeth.Fics.Api.Game,
                      Macbeth.Fics.Api.Move,
                      Macbeth.Fics.Api.Rating,
@@ -37,11 +38,12 @@ library
                      Macbeth.Fics.Api.Player,
                      Macbeth.Fics.Api.Result,
                      Macbeth.Fics.Parsers.Api,
+                     Macbeth.Fics.Parsers.Chatting,
                      Macbeth.Fics.Parsers.FicsMessageParser,
                      Macbeth.Fics.Parsers.GamesParser,
                      Macbeth.Fics.Parsers.MoveParser,
-                     Macbeth.Fics.Parsers.PositionParser,
                      Macbeth.Fics.Parsers.Players,
+                     Macbeth.Fics.Parsers.PositionParser,
                      Macbeth.Fics.Parsers.RatingParser,
                      Macbeth.Fics.Parsers.SeekMsgParsers,
                      Macbeth.Fics.Utils.Bitmask,
@@ -51,6 +53,8 @@ library
                      Macbeth.Utils.Utils,
                      Macbeth.Utils.Salt,
                      Macbeth.Wx.Challenge,
+                     Macbeth.Wx.Chat,
+                     Macbeth.Wx.ChatRegistry,
                      Macbeth.Wx.Configuration,
                      Macbeth.Wx.Finger,
                      Macbeth.Wx.GamesList,
