--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -81,7 +81,7 @@ library
 executable Macbeth
   main-is: src/Macbeth.hs
   build-depends: base  >= 4.2, wx, wxcore, macbeth-lib, stm, ALUT
-  extra-lib-dirs: /usr/local/Cellar/freealut/1.1.0/lib /usr/local/Cellar/sdl/1.2.15/lib
+  extra-lib-dirs: /usr/local/Cellar/freealut/1.1.0/lib
   ghc-options: -O3 -threaded -W
 
 test-suite macbeth-lib-test
