--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -65,9 +65,9 @@ library
                      Macbeth.Wx.Pending,
                      Macbeth.Wx.PartnerOffer,
                      Macbeth.Wx.PlayersList,
+                     Macbeth.Wx.RuntimeEnv,
                      Macbeth.Wx.Seek,
                      Macbeth.Wx.SoughtList,
-                     Macbeth.Wx.Sounds,
                      Macbeth.Wx.ToolBox,
                      Macbeth.Wx.Utils,
                      Macbeth.Wx.Game.BoardState,
