--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -92,10 +92,5 @@ test-suite macbeth-lib-test
     ghc-options: -W
     hs-source-dirs: test
     main-is: Spec.hs
-    other-modules: 
-      FicsMessageParserSpec,
-      GameResultSpec,
-      PlayersSpec,
-      SeekSpec,
-      ChattingSpec
-    build-depends: macbeth-lib, base, hspec == 2.*, bytestring, attoparsec
+    other-modules: FicsMessageParserSpec, GameResultSpec, PlayersSpec, SeekSpec, ChattingSpec, FicsConnectionSpec
+    build-depends: macbeth-lib, base, hspec == 2.*, bytestring, attoparsec, conduit
