--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -76,7 +76,8 @@ library
                      Macbeth.Wx.Game.StatusPanel,
                      Macbeth.Wx.Game.GameSounds,
                      Macbeth.Wx.Config.UserConfig,
-                     Macbeth.Wx.Config.Sounds
+                     Macbeth.Wx.Config.Sounds,
+                     Macbeth.Wx.Config.GameConfig
   other-modules: Paths_Macbeth
   ghc-options: -Wall
 
