--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -76,7 +76,7 @@ library
                      Macbeth.Wx.Game.GameSounds,
                      Macbeth.Wx.Config.UserConfig,
                      Macbeth.Wx.Config.Sounds,
-                     Macbeth.Wx.Config.GameConfig
+                     Macbeth.Wx.Config.BoardConfig
   other-modules: Paths_Macbeth
   ghc-options: -Wall
 
