--- a/stack.yaml
+++ b/stack.yaml
@@ -4,13 +4,14 @@ packages:
 - '.'
 
 extra-deps: 
-- wx-0.92.2.0
-- wxcore-0.92.2.0
-- wxc-0.92.2.0
-- wxdirect-0.92.2.0
+- wx-0.92.3.0
+- wxcore-0.92.3.0
+- wxc-0.92.3.0
+- wxdirect-0.92.3.0
 - ALUT-2.4.0.2
 - OpenAL-1.7.0.4
-
+- Cabal-1.24.2.0
+ 
 extra-lib-dirs: 
 - /usr/local/Cellar/freealut/1.1.0/lib/
 
