--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -19,7 +19,7 @@ source-repository head
 
 library
     build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
-                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
+                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, directory, filepath,
                    time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, cryptocipher, crypto-cipher-types,
                    binary, hslogger, aeson, process, OpenAL, ALUT, lens, unordered-containers
     hs-source-dirs: src
