--- a/stack.yaml
+++ b/stack.yaml
@@ -10,6 +10,13 @@ extra-deps:
 - wxdirect-0.92.2.0
 - ALUT-2.4.0.2
 - OpenAL-1.7.0.4
+- hspec-2.5.1
+- HUnit-1.6.0.0
+- QuickCheck-2.11.3
+- hspec-core-2.5.1
+- hspec-discover-2.5.1
+- hspec-expectations-0.8.2
+- quickcheck-io-0.2.0
  
 extra-lib-dirs: 
 - /usr/local/Cellar/freealut/1.1.0/lib/
