--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -78,6 +78,7 @@ library
                      Macbeth.Wx.Config.UserConfig,
                      Macbeth.Wx.Config.Sounds,
                      Macbeth.Wx.Config.BoardConfig
+                     Macbeth.Wx.Config.SeekConfig
   other-modules: Paths_Macbeth
   ghc-options: -Wall
 
