--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -23,72 +23,76 @@ source-repository head
   type: git
   location: https://github.com/tgass/macbeth
 
+flag console_log
+  description: Puts logs to console
+  default: False
 
 
 library
-    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
+  build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                    bytestring, split, attoparsec, filepath, containers, split, mtl, stm, directory, filepath,
                    time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, cryptocipher, crypto-cipher-types,
-                   hslogger, aeson, process, OpenAL, ALUT, lens, unordered-containers
-    hs-source-dirs: src
-    exposed-modules: Paths,
-                     Macbeth.Fics.FicsConnection
-                     Macbeth.Fics.FicsMessage,
-                     Macbeth.Fics.AppConfig,
-                     Macbeth.Fics.Api.Api,
-                     Macbeth.Fics.Api.Chat,
-                     Macbeth.Fics.Api.Game,
-                     Macbeth.Fics.Api.Move,
-                     Macbeth.Fics.Api.Rating,
-                     Macbeth.Fics.Api.Seek,
-                     Macbeth.Fics.Api.Offer,
-                     Macbeth.Fics.Api.OngoingGame,
-                     Macbeth.Fics.Api.Player,
-                     Macbeth.Fics.Api.Result,
-                     Macbeth.Fics.Parsers.Api,
-                     Macbeth.Fics.Parsers.Chatting,
-                     Macbeth.Fics.Parsers.FicsMessageParser,
-                     Macbeth.Fics.Parsers.GamesParser,
-                     Macbeth.Fics.Parsers.MoveParser,
-                     Macbeth.Fics.Parsers.Players,
-                     Macbeth.Fics.Parsers.PositionParser,
-                     Macbeth.Fics.Parsers.RatingParser,
-                     Macbeth.Fics.Parsers.SeekMsgParsers,
-                     Macbeth.Fics.Utils.Bitmask,
-                     Macbeth.Utils.BoardUtils,
-                     Macbeth.Utils.PGN,
-                     Macbeth.Utils.FEN,
-                     Macbeth.Utils.Utils,
-                     Macbeth.Utils.Salt,
-                     Macbeth.Wx.Challenge,
-                     Macbeth.Wx.Chat,
-                     Macbeth.Wx.ChatRegistry,
-                     Macbeth.Wx.Configuration,
-                     Macbeth.Wx.Finger,
-                     Macbeth.Wx.GamesList,
-                     Macbeth.Wx.GameType,
-                     Macbeth.Wx.Login,
-                     Macbeth.Wx.Match,
-                     Macbeth.Wx.Pending,
-                     Macbeth.Wx.PartnerOffer,
-                     Macbeth.Wx.PlayersList,
-                     Macbeth.Wx.RuntimeEnv,
-                     Macbeth.Wx.Seek,
-                     Macbeth.Wx.SoughtList,
-                     Macbeth.Wx.ToolBox,
-                     Macbeth.Wx.Utils,
-                     Macbeth.Wx.Game.BoardState,
-                     Macbeth.Wx.Game.Board,
-                     Macbeth.Wx.Game.Game,
-                     Macbeth.Wx.Game.PieceSet,
-                     Macbeth.Wx.Game.StatusPanel,
-                     Macbeth.Wx.Game.GameSounds,
-                     Macbeth.Wx.Config.UserConfig,
-                     Macbeth.Wx.Config.Sounds,
-                     Macbeth.Wx.Config.BoardConfig
-                     Macbeth.Wx.Config.SeekConfig
+                   hslogger, aeson, process, OpenAL, ALUT, lens, unordered-containers, gitrev
+  hs-source-dirs: src
   other-modules: Paths_macbeth_lib
   ghc-options: -Wall
+  if flag(console_log)
+    cpp-options: -DCONSOLE_LOG
+  exposed-modules: Paths,
+                   Macbeth.Fics.FicsConnection
+                   Macbeth.Fics.FicsMessage,
+                   Macbeth.Fics.Api.Api,
+                   Macbeth.Fics.Api.Chat,
+                   Macbeth.Fics.Api.Game,
+                   Macbeth.Fics.Api.Move,
+                   Macbeth.Fics.Api.Rating,
+                   Macbeth.Fics.Api.Seek,
+                   Macbeth.Fics.Api.Offer,
+                   Macbeth.Fics.Api.OngoingGame,
+                   Macbeth.Fics.Api.Player,
+                   Macbeth.Fics.Api.Result,
+                   Macbeth.Fics.Parsers.Api,
+                   Macbeth.Fics.Parsers.Chatting,
+                   Macbeth.Fics.Parsers.FicsMessageParser,
+                   Macbeth.Fics.Parsers.GamesParser,
+                   Macbeth.Fics.Parsers.MoveParser,
+                   Macbeth.Fics.Parsers.Players,
+                   Macbeth.Fics.Parsers.PositionParser,
+                   Macbeth.Fics.Parsers.RatingParser,
+                   Macbeth.Fics.Parsers.SeekMsgParsers,
+                   Macbeth.Fics.Utils.Bitmask,
+                   Macbeth.Utils.BoardUtils,
+                   Macbeth.Utils.PGN,
+                   Macbeth.Utils.FEN,
+                   Macbeth.Utils.Utils,
+                   Macbeth.Utils.Salt,
+                   Macbeth.Wx.Challenge,
+                   Macbeth.Wx.Chat,
+                   Macbeth.Wx.ChatRegistry,
+                   Macbeth.Wx.Configuration,
+                   Macbeth.Wx.Finger,
+                   Macbeth.Wx.GamesList,
+                   Macbeth.Wx.GameType,
+                   Macbeth.Wx.Login,
+                   Macbeth.Wx.Match,
+                   Macbeth.Wx.Pending,
+                   Macbeth.Wx.PartnerOffer,
+                   Macbeth.Wx.PlayersList,
+                   Macbeth.Wx.RuntimeEnv,
+                   Macbeth.Wx.Seek,
+                   Macbeth.Wx.SoughtList,
+                   Macbeth.Wx.ToolBox,
+                   Macbeth.Wx.Utils,
+                   Macbeth.Wx.Game.BoardState,
+                   Macbeth.Wx.Game.Board,
+                   Macbeth.Wx.Game.Game,
+                   Macbeth.Wx.Game.PieceSet,
+                   Macbeth.Wx.Game.StatusPanel,
+                   Macbeth.Wx.Game.GameSounds,
+                   Macbeth.Wx.Config.UserConfig,
+                   Macbeth.Wx.Config.Sounds,
+                   Macbeth.Wx.Config.BoardConfig
+                   Macbeth.Wx.Config.SeekConfig
 
 executable Macbeth
   main-is: src/Macbeth.hs
